fix: 'Fix' broken css by deleting lines until it stops being broken. Best way to fix css. :)

--- a/static/styles/xdy-pf2e-workbench.css
+++ b/static/styles/xdy-pf2e-workbench.css
@@ -57,10 +57,6 @@
     text-align: center;
 }
 
-td:not(:last-child) {
-    border-right: 1px solid black;
-}
-
 .roll-app .roll-app-table tbody tr.selected {
     background: rgb(0 0 0 / 66%);
     color: white;
